--- a/app/src/main/res/layout/activity_all_options.xml
+++ b/app/src/main/res/layout/activity_all_options.xml
@@ -27,6 +27,7 @@
         android:onClick="search"
         android:text="Search"
         android:backgroundTint="#10173C"
+        android:textColor="@color/white"
         app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
