--- a/app/src/main/res/layout/activity_available_subject_resource.xml
+++ b/app/src/main/res/layout/activity_available_subject_resource.xml
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:onClick="searchitem"
         android:backgroundTint="#10173C"
         app:cornerRadius="20dp"
