--- a/app/src/main/res/layout/activity_available_subject_tutorials.xml
+++ b/app/src/main/res/layout/activity_available_subject_tutorials.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="5dp"
         android:text="Click on icon to open the link"
         android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
